remove 3 last changesets